--- a/arm64_cfn.yaml
+++ b/arm64_cfn.yaml
@@ -61,9 +61,9 @@ Resources:
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash -xe
-          # exec > >(tee /var/log/cloud-init-output.log|logger -t USER-DATA -s 2>/dev/console) 2>&1
-          #apt update
-          #apt install -y awscli
+          exec > >(tee /var/log/cloud-init-output.log|logger -t USER-DATA -s 2>/dev/console) 2>&1
+          apt update
+          apt install -y awscli
           #aws s3 cp s3://${S3BucketName}/src src/ --recursive
           echo 'Done w user data!'
 
