--- a/arm64_cfn.yaml
+++ b/arm64_cfn.yaml
@@ -71,7 +71,7 @@ Resources:
           #aws s3 cp s3://${S3BucketName}/src src/ --recursive
           az=$(curl -s http://169.254.169.254/latest/meta-data/placement/availability-zone)
           echo $az
-          region=${az%?}
+          region=${az::-1}
           instance_id=$(curl -s http://169.254.169.254/latest/meta-data/instance-id)
           aws ec2 create-tags --resources $instance_id --region $region --tags Key=Name,Value=myname
           echo 'SNAPPING_COMPLETE'
