--- a/arm64_cfn.yaml
+++ b/arm64_cfn.yaml
@@ -32,6 +32,9 @@ Resources:
           - Effect: Allow
             Action: 's3:*'
             Resource: '*'
+          - Effect: Allow
+            Action: 'ec2:CreateTags'
+            Resource: '*'
       Roles:
         - !Ref S3AccessRole
 
@@ -62,12 +65,12 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash -xe
           exec > >(tee /var/log/cloud-init-output.log|logger -t USER-DATA -s 2>/dev/console) 2>&1
-          apt update
-          apt install -y awscli
-          apt remove lxd-client -y
-          snap install lxd
-          lxd init --auto
-          snap install snapcraft --classic
+          #apt update
+          #apt install -y awscli
+          #apt remove lxd-client -y
+          #snap install lxd
+          #lxd init --auto
+          #snap install snapcraft --classic
           #aws s3 cp s3://${S3BucketName}/src src/ --recursive
           az=$(curl -s http://169.254.169.254/latest/meta-data/placement/availability-zone)
           echo $az
