--- a/arm64_cfn.yaml
+++ b/arm64_cfn.yaml
@@ -65,8 +65,8 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash -xe
           exec > >(tee /var/log/cloud-init-output.log|logger -t USER-DATA -s 2>/dev/console) 2>&1
-          #apt update
-          #apt install -y awscli
+          apt update
+          apt install -y awscli
           #apt remove lxd-client -y
           #snap install lxd
           #lxd init --auto
