--- a/arm64_cfn.yaml
+++ b/arm64_cfn.yaml
@@ -81,11 +81,11 @@ Resources:
           aws ec2 create-tags --resources $instance_id --region $region --tags Key=Status,Value=$STATUS
           mkdir -p /tmp/robomaker_snap
           cd tmp/robomaker_snap
-          aws s3 cp s3://S3_BUCKET/src src/ --recursive
-          aws s3 cp s3://S3_BUCKET/snap snap/ --recursive
+          aws s3 cp s3://${S3BucketName}/src src/ --recursive
+          aws s3 cp s3://${S3BucketName}/snap snap/ --recursive
           #snapcraft --use-lxd
           ls .
-          #aws s3 cp *.snap s3://S3_BUCKET/
+          #aws s3 cp *.snap s3://${S3BucketName}/
 
           STATUS=COMPLETE
           aws ec2 create-tags --resources $instance_id --region $region --tags Key=Status,Value=$STATUS
