--- a/arm64_cfn.yaml
+++ b/arm64_cfn.yaml
@@ -82,7 +82,7 @@ Resources:
           mkdir -p /tmp/robomaker_snap
           cd tmp/robomaker_snap
           aws s3 cp s3://${S3BucketName}/src src/ --recursive
-          aws s3 cp s3://${S3BucketName}/snap snap/ --recursive
+          aws s3 cp s3://${S3BucketName}/tsnap snap/ --recursive
           #snapcraft --use-lxd
           ls .
           #aws s3 cp *.snap s3://${S3BucketName}/
