--- a/arm64_cfn.yaml
+++ b/arm64_cfn.yaml
@@ -70,26 +70,21 @@ Resources:
           apt update
           apt install -y awscli
 
-          status=CONFIGURING
-          aws ec2 create-tags --resources $instance_id --region $region --tags Key=Status,Value=$status
+          aws ec2 create-tags --resources $instance_id --region $region --tags Key=Status,Value=CONFIGURING
           apt remove lxd-client -y
           snap install lxd
           lxd init --auto
           snap install snapcraft --classic
 
-          status=SNAPPING
-          aws ec2 create-tags --resources $instance_id --region $region --tags Key=Status,Value=$status
+          aws ec2 create-tags --resources $instance_id --region $region --tags Key=Status,Value=SNAPPING
           mkdir -p /tmp/robomaker_snap
           cd tmp/robomaker_snap
           aws s3 cp s3://${S3BucketName}/src src/ --recursive
           aws s3 cp s3://${S3BucketName}/tsnap snap/ --recursive
-          #snapcraft --use-lxd
-          ls .
-          #aws s3 cp *.snap s3://${S3BucketName}/
+          snapcraft --use-lxd
+          aws s3 cp *.snap s3://${S3BucketName}/
 
-          status=COMPLETE
-          aws ec2 create-tags --resources $instance_id --region $region --tags Key=Status,Value=$status
-          
+          aws ec2 create-tags --resources $instance_id --region $region --tags Key=Status,Value=COMPLETE
           echo 'SNAPPING_COMPLETE'
 
 Outputs:
