Added security measures to cfn stack

--- a/xcompile/arm64_cfn.yaml
+++ b/xcompile/arm64_cfn.yaml
@@ -81,11 +81,14 @@ Resources:
           cd tmp/robomaker_snap
           aws s3 cp s3://${S3BucketName}/src src/ --recursive
           aws s3 cp s3://${S3BucketName}/snap snap/ --recursive
-          snapcraft --use-lxd
+          #snapcraft --use-lxd
           aws s3 cp *.snap s3://${S3BucketName}/
 
           aws ec2 create-tags --resources $instance_id --region $region --tags Key=Status,Value=COMPLETE
           echo 'Exiting user data script'
+
+          echo {AWS::Region}
+          echo {Arm64Instance.AvailabilityZone}
 
 Outputs:
   InstanceId:
