--- a/xcompile/arm64_cfn.yaml
+++ b/xcompile/arm64_cfn.yaml
@@ -30,8 +30,11 @@ Resources:
         Version: 2012-10-17
         Statement:
           - Effect: Allow
-            Action: 's3:*'
+            Action: 's3:ListBucket'
             Resource: !Sub 'arn:aws:s3:::${UniqueName}'
+          - Effect: Allow
+            Action: 's3:*Object'
+            Resource: !Sub 'arn:aws:s3:::${UniqueName}/*'
           - Effect: Allow
             Action: 'ec2:CreateTags'
             Resource: '*'
